--- a/src/app/components/user-page/user-page.component.html
+++ b/src/app/components/user-page/user-page.component.html
@@ -2,4 +2,8 @@
 
     <button class="border-2 p-2 rounded-md hover:bg-black hover:text-white w-36
     shadow-xl" (click)="goToHomePage()"> Back to home</button>
+    <div class="flex flex-col justify-center items-center mt-40">
+        <p class="font-semibold"> <span>Username: {{ username }}</span></p>
+        <p class="font-semibold"> <span>Password: {{ password }}</span></p>
+    </div>
 </div>
