--- a/src/app/components/password/password.component.html
+++ b/src/app/components/password/password.component.html
@@ -9,7 +9,8 @@
                         d="M9.00195 7C9.01406 4.82497 9.11051 3.64706 9.87889 2.87868C10.7576 2 12.1718 2 15.0002 2L16.0002 2C18.8286 2 20.2429 2 21.1215 2.87868C22.0002 3.75736 22.0002 5.17157 22.0002 8L22.0002 16C22.0002 18.8284 22.0002 20.2426 21.1215 21.1213C20.2429 22 18.8286 22 16.0002 22H15.0002C12.1718 22 10.7576 22 9.87889 21.1213C9.11051 20.3529 9.01406 19.175 9.00195 17"
                         stroke="#1C274C" stroke-width="1.5" stroke-linecap="round" />
                 </svg>
-                <input class=" border-2 rounded-md p-2 shadow-xl " type="text" placeholder="Username">
+                <input class=" border-2 rounded-md p-2 shadow-xl " type="text" placeholder="Username"
+                    [(ngModel)]="username">
             </div>
             <div class="flex justify-center items-center gap-2">
                 <svg width="20px" height="20px" viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg">
@@ -29,7 +30,7 @@
                     <path class="a" d="M13.35,17.77V15.16a10.66,10.66,0,0,1,21.32,0v2.61" />
                 </svg>
                 <input class=" border-2 rounded-md p-2 shadow-xl" type="password" placeholder="Enter password"
-                    [(ngModel)]="password" (input)="checkStrength()" />
+                    [(ngModel)]="password" (input)="checkStrength()"  />
             </div>
 
         </div>
